rating labels: add correct alignment

--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -4,3 +4,10 @@
         @content;
     }
 }
+
+// > 1280
+@mixin breakpoint-xl() {
+    @media (min-width: 80rem) {
+        @content;
+    }
+}
